--- a/drawingtool_pencil/Procfile
+++ b/drawingtool_pencil/Procfile
@@ -1,6 +1,1 @@
-from drawingtool_pencil import drawingtool
-import gunicorn
-
-
-
-web : gunicorn; drawingtool.wsgi
+web : gunicorn drawingtool.wsgi
